fix: update spacing for copyright

--- a/practice-two/src/styles/layout/footer.css
+++ b/practice-two/src/styles/layout/footer.css
@@ -86,7 +86,7 @@
 }
 
 .copyright-wrapper {
-  margin-top: 15px;
+  margin-top: 16px;
   display: flex;
   flex-direction: column;
   gap: 15px;
